--- a/todoList.html
+++ b/todoList.html
@@ -11,7 +11,7 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="todo.css">
-        <script src="todo.js"></script>
+        <script differ src="todo.js"></script>
     <title>ToDo List</title>
 </head>
 
